--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
+    "dev": "node --watch index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -15,8 +17,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
-    "mysql2": "^3.15.3",
-    "nodemailer": "^7.0.10",
-    "nodemon": "^3.1.10"
+    "mongodb": "^7.0.0",
+    "morgan": "^1.10.1"
   }
 }
